2012-12-24  Yury Semikhatsky  <yurys@chromium.org>

        Memory instrumentation: provide a way to mark a node as a root
        https://bugs.webkit.org/show_bug.cgi?id=105737

        Reviewed by Alexander Pavlov.

        Objects added using MemoryInstrumentation::addRootObject will be marked as roots.

        * wtf/MemoryInstrumentation.cpp:
        (WTF::MemoryInstrumentation::WrapperBase::process):
        (WTF):
        (WTF::MemoryInstrumentation::WrapperBase::processPointer):
        (WTF::MemoryInstrumentation::WrapperBase::processRootObjectRef):
        * wtf/MemoryInstrumentation.h:
        (WrapperBase):
        * wtf/MemoryObjectInfo.h: added root marker which can be used by the heap graph builder.
        (WTF::MemoryObjectInfo::MemoryObjectInfo):
        (WTF::MemoryObjectInfo::isRoot):
        (WTF::MemoryObjectInfo::markAsRoot):
        (MemoryObjectInfo):

2012-12-24  Ilya Tikhonovsky  <loislo@chromium.org>

        Web Inspector: Native Memory Instrumentation: propagate member type as edge type to the serialized heap graph.
        https://bugs.webkit.org/show_bug.cgi?id=105725

        Reviewed by Yury Semikhatsky.

        MemoryOwningType was renamed to MemberType.
        Source argument were removed from reportEdge, reportLeaf and other edge related methods because it is not necessary.
        MemberType argument was propagated from MemoryInstrumentation down to HeapGraphSerializer.

        The changes covered by tests in TestWebKitAPI.

        * wtf/MemoryInstrumentation.cpp:
        (WTF::MemoryInstrumentation::reportEdge):
        (WTF::MemoryInstrumentation::reportLinkToBuffer):
        (WTF::MemoryClassInfo::addPrivateBuffer):
        * wtf/MemoryInstrumentation.h:
        (MemoryInstrumentationClient):
        (MemoryInstrumentation):
        (WTF::MemoryInstrumentation::addRawBuffer):
        (WTF::MemoryInstrumentation::MemberTypeTraits::addObject):
        (WTF::MemoryInstrumentation::addObjectImpl):
